[project]
name = "monitoring"
version = "0.1.0"
description = "Monitoring framework to test UAS Service Suppliers"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "aiohttp",
    "arrow",
    "bc-jsonpath-ng",
    "cryptography",
    "deprecation",
    "faker",
    "flask",
    "flask-login",
    "geojson",
    "gevent",
    "google-auth",
    "graphviz",
    "gunicorn",
    "implicitdict",
    "jsonnet",
    "jsonschema",
    "jwcrypto",
    "kubernetes",
    "locust",
    "loguru",
    "lxml",
    "marko",
    "numpy",
    "oauthlib",
    "pem",
    "pip-tools",
    "psycopg[binary]",
    "pvlib",
    "pyjwt",
    "pykml",
    "pyopenssl",
    "pyproj",
    "pyyaml",
    "requests",
    "s2sphere",
    "scipy",
    "shapely",
    "structlog",
    "termcolor",
    "testcontainers",
    "uas-standards",
    "uuid6",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.1",
    "pytest",
    "pytest-mock",
    "ruff",
    "types-lxml>=2025.8.25",
]

[tool.uv]
default-groups = []

[tool.ruff]
target-version = "py313"

# Default + isort + pyupgrade
lint.select = [
    "E4", "E7", "E9", "F", "I", "UP"
]
extend-exclude = [
  "interfaces/*",
  "monitoring/prober/output/*",
  "monitoring/mock_uss/output/*",
  "monitoring/uss_qualifier/output/*",
]
line-length = 88

[tool.basedpyright]
typeCheckingMode = "standard"
failOnWarnings = true

exclude = [
  "**/__pycache__",
  "**/.*",
  "interfaces/*",
  "monitoring/prober/output/*",
  "monitoring/mock_uss/output/*",
  "monitoring/uss_qualifier/output/*",
]
