[project]
name = "monitoring"
dynamic = ["version"]
authors = [
  { name="InterUSS Platform", email="tsc@lists.interussplatform.org" },
]
description = "Monitoring framework to test UAS Service Suppliers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "arrow",
    "bc-jsonpath-ng",
    "cryptography",
    "deprecation",
    "faker",
    "flask",
    "flask-login",
    "geojson",
    "gevent",
    "google-auth",
    "graphviz",
    "gunicorn",
    "implicitdict",
    "jsonnet",
    "jsonschema",
    "jwcrypto",
    "kubernetes",
    "locust",
    "loguru",
    "lxml",
    "marko",
    "numpy",
    "oauthlib",
    "pem",
    "pip-tools",
    "psycopg[binary]",
    "pvlib",
    "pyjwt",
    "pykml",
    "pyopenssl",
    "pyproj",
    "pyyaml",
    "requests",
    "s2sphere",
    "scipy",
    "shapely",
    "structlog",
    "termcolor",
    "testcontainers",
    "uas-standards",
    "uuid6",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest",
    "pytest-mock",
    "ruff",
    "types-lxml>=2025.8.25",
]

[tool.uv]
default-groups = []
exclude-newer = "P7D"
exclude-newer-package = { uas-standards = false }

[tool.ruff]
target-version = "py313"
extend-exclude = [
    "interfaces/*",
    "monitoring/prober/output/*",
    "monitoring/mock_uss/output/*",
    "monitoring/uss_qualifier/output/*",
]
line-length = 88

[tool.ruff.lint]
# Default + isort + pyupgrade
select = [
    "E4", "E7", "E9", "F", "I", "UP"
]
# Explicitly ignore UP045 (Optional[Foo] -> Foo | None)
ignore = ["UP045"]
unfixable = ["UP045"]

[tool.basedpyright]
typeCheckingMode = "standard"
failOnWarnings = true

exclude = [
  "**/__pycache__",
  "**/.*",
  "interfaces/*",
  "monitoring/prober/output/*",
  "monitoring/mock_uss/output/*",
  "monitoring/uss_qualifier/output/*",
]

[build-system]
requires = [
  "setuptools>=83.0.0",
  "wheel",               # for bdist package distribution
  "setuptools_scm>=10.0.5", # for automated versioning
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "monitoring" = "monitoring" }

[tool.setuptools.packages.find]
where = ["."]
include = [
  "monitoring.deployment_manager*",
  "monitoring.mock_uss*",
  "monitoring.monitorlib*",
  "monitoring.prober*",
  "monitoring.uss_qualifier*",
  "monitoring._version.py"
]
namespaces = true

[tool.setuptools_scm]
write_to = "monitoring/_version.py"
tag_regex = "^interuss/monitoring/v(?P<version>\\d+\\.\\d+\\.\\d+)"

